--- a/illust2/css/style.css
+++ b/illust2/css/style.css
@@ -1,3 +1,4 @@
+body{ background: #f2cfd6;}
 #A_d {text-align: center; overflow: hidden; height: 100vh;}
 #A_d ul li:nth-child(2) {margin-top: -818px; padding-left: 595px;
     animation:ne;
