--- a/illust3/css/style.css
+++ b/illust3/css/style.css
@@ -1,6 +1,7 @@
+body {overflow: hidden;}
+
 #h_st {}
-#h_st ul li:nth-child(1) {}
-   
+.main_bg{height: 100vh;}   
 #h_st ul li:nth-child(2) {margin-top: -828px; padding-left: 1200px;
     animation: b_d;
     animation-duration:10s;  /*걸리는 시간*/
@@ -15,15 +16,15 @@
 
 
 @keyframes b_d {
-    0% { transform: translate(-200px, 30px);}
-    5% { transform: translate(-300px, 50px);}
+    0% {transform: translate(0px, 0px);}
+    5% {transform: translate(-300px, 50px);}
     10% {transform: translate(-600px, 30px);}
     15% {transform: translate(-800px, 50px);}
-    45% {transform: rotateY(180deg) translate(1400px, 50px);}
-    55% {transform: rotateY(180deg) translate(1000px, 30px);}
-    60% {transform: rotateY(180deg) translate(900px, 50px);}
-    75% {transform: rotateY(180deg) translate(650px, 30px);}
-    90% { transform: rotateY(180deg) translate(350px, 50px);}
+    45% {transform: rotateY(180deg) translate(700px, 50px);}
+    55% {transform: rotateY(180deg) translate(400px, 30px);}
+    60% {transform: rotateY(180deg) translate(100px, 50px);}
+    75% {transform: rotateY(180deg) translate(-200px, 30px);}
+    90% {transform: rotateY(180deg) translate(-500px, 50px);}
     
   }
 
@@ -36,18 +37,7 @@
     position: relative;
     display: inline-block;
     
-    &:before {
-      position: absolute;
-      left: 0;
-      top: -10%;
-      width: 100%;
-      height: 120%;
-      background: #fff;
-      filter: blur(10px);
-      content: "";
-      opacity: 0;
-      animation: flash .5s ease-out alternate infinite;
-    }
+
   }
   
   @keyframes flash{
